src/printing_ffi.h

    // --- Android: bundled cupsd scheduler (runs inside the app sandbox, app uid) ---
    // These are no-ops / return errors on non-Android platforms.
    //
    // start_cups_server: boots the bundled cupsd from the app sandbox. It creates
    //   the runtime dirs + config under `server_root`, builds the ServerBin symlink
    //   farm pointing at the extracted lib*.so executables in `native_lib_dir`,
    //   forks+execs `native_lib_dir/libcupsd.so`, waits until it answers IPP, then
    //   points the libcups client at it (cupsSetServer 127.0.0.1:<port>).
    //   server_root:    app-writable dir for config/spool/logs/state (e.g. filesDir/cups).
    //   native_lib_dir: applicationInfo.nativeLibraryDir (where the lib*.so live).
    //   data_dir:       dir containing share/cups/{mime,data,templates} extracted from assets.
    //   doc_root:       DocumentRoot for the web interface (static index.html/css/images
    //                   extracted from assets). May be NULL/"" to disable the web UI.
    //   Returns the chosen localhost port (>0) on success, or <0 on error
    //   (get_last_error has details).
    FFI_PLUGIN_EXPORT int32_t start_cups_server(const char *server_root, const char *native_lib_dir, const char *data_dir, const char *doc_root);
    // cups_usb_fd_sock_path: the canonical AF_UNIX socket path the fd-server binds,
    //   the backend connects to, and the Kotlin layer must pass to
    //   start_usb_fd_server — computed as <server_root>/usbfd.sock from the most
    //   recent start_cups_server call. Returns a pointer to a static buffer, or NULL
    //   if start_cups_server has not run yet (Android). NULL on other platforms.
    FFI_PLUGIN_EXPORT const char *cups_usb_fd_sock_path(void);
    // generate_cups_dnp_ppd: (Android) generate — if not already present — a Gutenprint
    //   PPD for a specific DNP/Citizen dye-sub `driver` id (the DnpUsbManager "make"
    //   string, e.g. "dnp-dsrx1", "dnp-ds620"; matches src/xml/printers/dyesub.xml
    //   <printer driver="..."/>) and return its ABSOLUTE on-device path. Pass that path
    //   straight to add_cups_printer so it uploads the PPD file directly (no cups-driverd).
    //   Requires start_cups_server to have run. Returns a pointer to a static buffer, or
    //   NULL on failure (get_last_error). NULL / unsupported on non-Android platforms.
    FFI_PLUGIN_EXPORT const char *generate_cups_dnp_ppd(const char *driver);
    // add_cups_printer: creates/modifies a printer queue on the (local) CUPS server
    //   via the CUPS-Add-Modify-Printer IPP operation. `ppd_or_model` may be:
    //     - an ABSOLUTE path to a readable .ppd file -> the PPD FILE is uploaded
    //       directly (the `lpadmin -P` mechanism); cups-driverd is NOT invoked;
    //     - a model name such as "raw" (raw queue), "everywhere", or NULL;
    //     - any other ppd-name string, resolved server-side by cups-driverd.
    //   Returns true on success; get_last_error has details on failure.
    FFI_PLUGIN_EXPORT bool add_cups_printer(const char *name, const char *device_uri, const char *ppd_or_model);
    // remove_cups_printer: deletes a printer queue on the (local) CUPS server via
    //   the CUPS-Delete-Printer IPP operation. Idempotent: a "not found" result is
    //   treated as success (so it is safe to call on USB detach for an already-gone
    //   queue). Returns true on success; get_last_error has details on failure.
    FFI_PLUGIN_EXPORT bool remove_cups_printer(const char *name);
    // Functions that submit a job and return a job ID for status tracking.
    FFI_PLUGIN_EXPORT int32_t submit_raw_data_job(const char *printer_name, const uint8_t *data, int length, const char *doc_name, int num_options, const char **option_keys, const char **option_values);
    FFI_PLUGIN_EXPORT int32_t submit_pdf_job(const char *printer_name, const char *pdf_file_path, const char *doc_name, int scaling_mode, int copies, const char *page_range, int num_options, const char **option_keys, const char **option_values, const char *alignment);
    // Submit an arbitrary file (image, PDF, ...) letting CUPS auto-detect the
    // document format from the file contents. Returns the job id (>0) on success,
    // 0 on failure. Not supported on Windows. (macOS/Linux/Android via CUPS.)
    FFI_PLUGIN_EXPORT int32_t submit_file_job(const char *printer_name, const char *file_path, const char *doc_name, int num_options, const char **option_keys, const char **option_values);
    // Function to initialize the PDFium library. Must be called once on startup on Windows.
    FFI_PLUGIN_EXPORT void init_pdfium_library(void);
    FFI_PLUGIN_EXPORT void shutdown_pdfium_library(void);
    FFI_PLUGIN_EXPORT bool print_file_with_dialog(const char *file_path, const char *doc_name);
    // CUPS printer control functions (macOS/Linux only)
    FFI_PLUGIN_EXPORT bool cups_pause_printer(const char *printer_name, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_resume_printer(const char *printer_name, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_enable_printer(const char *printer_name, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_disable_printer(const char *printer_name, const char *reason, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_accept_jobs(const char *printer_name, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_reject_jobs(const char *printer_name, const char *reason, const char *username, const char *password);
    // CUPS job control functions (macOS/Linux only)
    FFI_PLUGIN_EXPORT bool cups_hold_job(const char *printer_name, uint32_t job_id, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_release_job(const char *printer_name, uint32_t job_id, const char *username, const char *password);