lib/printing_ffi_bindings_generated.dart


  /// Android only: the canonical AF_UNIX socket path (`<serverRoot>/usbfd.sock`)
  /// the fd-server binds and the backend connects to. NULL until start_cups_server ran.
  ffi.Pointer<ffi.Char> cups_usb_fd_sock_path() {
    return _cups_usb_fd_sock_path();
  }

  late final _cups_usb_fd_sock_pathPtr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('cups_usb_fd_sock_path');
  late final _cups_usb_fd_sock_path = _cups_usb_fd_sock_pathPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Android only: generate a Gutenprint PPD for a DNP dye-sub `driver` id and return
  /// its absolute on-device path (pass straight to add_cups_printer). NULL on failure.
  ffi.Pointer<ffi.Char> generate_cups_dnp_ppd(
    ffi.Pointer<ffi.Char> driver,
  ) {
    return _generate_cups_dnp_ppd(
      driver,
    );
  }

  late final _generate_cups_dnp_ppdPtr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>>('generate_cups_dnp_ppd');
  late final _generate_cups_dnp_ppd = _generate_cups_dnp_ppdPtr.asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  /// Creates/modifies a CUPS queue via CUPS-Add-Modify-Printer (macOS/Linux/Android).
  bool add_cups_printer(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> device_uri,
    ffi.Pointer<ffi.Char> ppd_or_model,
  ) {
    return _add_cups_printer(
      name,
      device_uri,
      ppd_or_model,
    );
  }

  late final _add_cups_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('add_cups_printer');
  late final _add_cups_printer = _add_cups_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Deletes a CUPS queue via CUPS-Delete-Printer (macOS/Linux/Android). Idempotent.
  bool remove_cups_printer(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _remove_cups_printer(
      name,
    );
  }

  late final _remove_cups_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>('remove_cups_printer');
  late final _remove_cups_printer = _remove_cups_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  /// Functions that submit a job and return a job ID for status tracking.
  int submit_raw_data_job(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Uint8> data,
    int length,
    ffi.Pointer<ffi.Char> doc_name,
    int num_options,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_values,
  ) {
    return _submit_raw_data_job(
      printer_name,
      data,
      length,
      doc_name,
      num_options,
      option_keys,
      option_values,
    );
  }

  late final _submit_raw_data_jobPtr = _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>, ffi.Int, ffi.Pointer<ffi.Char>, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
    'submit_raw_data_job',
  );
  late final _submit_raw_data_job = _submit_raw_data_jobPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int submit_pdf_job(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> pdf_file_path,
    ffi.Pointer<ffi.Char> doc_name,
    int scaling_mode,
    int copies,
    ffi.Pointer<ffi.Char> page_range,
    int num_options,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_values,
    ffi.Pointer<ffi.Char> alignment,
  ) {
    return _submit_pdf_job(
      printer_name,
      pdf_file_path,
      doc_name,
      scaling_mode,
      copies,
      page_range,
      num_options,
      option_keys,
      option_values,
      alignment,
    );
  }

  late final _submit_pdf_jobPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>)>
      >('submit_pdf_job');
  late final _submit_pdf_job = _submit_pdf_jobPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>)>();

  /// Submit an arbitrary file (image, PDF, ...) letting CUPS auto-detect the
  /// document format from the file contents. Returns the job id (>0) on success,
  /// 0 on failure. Not supported on Windows (macOS/Linux/Android via CUPS).
  int submit_file_job(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> doc_name,
    int num_options,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> option_values,
  ) {
    return _submit_file_job(
      printer_name,
      file_path,
      doc_name,
      num_options,
      option_keys,
      option_values,
    );
  }

  late final _submit_file_jobPtr = _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
    'submit_file_job',
  );
  late final _submit_file_job = _submit_file_jobPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Function to initialize the PDFium library. Must be called once on startup on Windows.
  void init_pdfium_library() {
    return _init_pdfium_library();
  }

  late final _init_pdfium_libraryPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>('init_pdfium_library');
  late final _init_pdfium_library = _init_pdfium_libraryPtr.asFunction<void Function()>();

  void shutdown_pdfium_library() {
    return _shutdown_pdfium_library();
  }

  late final _shutdown_pdfium_libraryPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>('shutdown_pdfium_library');
  late final _shutdown_pdfium_library = _shutdown_pdfium_libraryPtr.asFunction<void Function()>();

  bool print_file_with_dialog(
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> doc_name,
  ) {
    return _print_file_with_dialog(
      file_path,
      doc_name,
    );
  }

  late final _print_file_with_dialogPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('print_file_with_dialog');
  late final _print_file_with_dialog = _print_file_with_dialogPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// CUPS printer control functions (macOS/Linux only)
  bool cups_pause_printer(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_pause_printer(
      printer_name,
      username,
      password,
    );
  }

  late final _cups_pause_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_pause_printer');
  late final _cups_pause_printer = _cups_pause_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_resume_printer(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_resume_printer(
      printer_name,
      username,
      password,
    );
  }

  late final _cups_resume_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_resume_printer');
  late final _cups_resume_printer = _cups_resume_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_enable_printer(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_enable_printer(
      printer_name,
      username,
      password,
    );
  }

  late final _cups_enable_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_enable_printer');
  late final _cups_enable_printer = _cups_enable_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_disable_printer(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_disable_printer(
      printer_name,
      reason,
      username,
      password,
    );
  }

  late final _cups_disable_printerPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_disable_printer');
  late final _cups_disable_printer = _cups_disable_printerPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_accept_jobs(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_accept_jobs(
      printer_name,
      username,
      password,
    );
  }

  late final _cups_accept_jobsPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_accept_jobs');
  late final _cups_accept_jobs = _cups_accept_jobsPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_reject_jobs(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_reject_jobs(
      printer_name,
      reason,
      username,
      password,
    );
  }

  late final _cups_reject_jobsPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_reject_jobs');
  late final _cups_reject_jobs = _cups_reject_jobsPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// CUPS job control functions (macOS/Linux only)
  bool cups_hold_job(
    ffi.Pointer<ffi.Char> printer_name,
    int job_id,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_hold_job(
      printer_name,
      job_id,
      username,
      password,
    );
  }

  late final _cups_hold_jobPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_hold_job');
  late final _cups_hold_job = _cups_hold_jobPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_release_job(
    ffi.Pointer<ffi.Char> printer_name,
    int job_id,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_release_job(
      printer_name,
      job_id,
      username,
      password,
    );
  }

  late final _cups_release_jobPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_release_job');
  late final _cups_release_job = _cups_release_jobPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
